# skia-rich-text

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/vaipixel/skiarichtext/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vaipixel/skiarichtext/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vaipixel/skiarichtext/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
librender/: build.gradle.kts
librender/src/androidTest/java/com/vaipixel/librender/: ExampleInstrumentedTest.kt
librender/src/main/cpp/: CMakeLists.txt  jni_utils.cpp  librender.cpp
librender/src/main/java/com/vaipixel/librender/: NativeLib.kt  PixelCanvas.kt  SkiaPlayer.kt
librender/src/test/java/com/vaipixel/librender/: ExampleUnitTest.kt
